--- a/README
+++ b/README
@@ -41,7 +41,8 @@ To plot the calculated track -SEE PART I-, you should go to the 'Code' folder an
 
 bash plotmedicanestrack.sh PATHTOFOLDER ADJUST RESOLUTION DTHRESHOLD DTTHRESHOLD
 
-PATHTOFOLDER must be the path to the folder created by the PART I. Inside that folder, it should be present the *-track.RData file -output of findmedicanes.sh-, along with a folder called 'output' containing the vertically interpolated files -slp, uvmet10 and z- in netcdf format. PATHTOFOLDER is to be introduced with no quotation marks. ADJUST should be one of TRUE/FALSE, and determines if the output map extent should be adjusted to the track, or the complete domain should be plotted instead. Either RESOLUTION, DTHRESHOLD or DTTHRESHOLD, which should be numbers. RESOLUTION represents the grid horizontal resolution in kilometers -the same as in the part I-; DTHRESHOLD refers to the maximum allowed distance between two track points to be connected -in km-, and a value of DTHRESHOLD below 200 km is highly recommended for physical reasons if timestep is 1 hour, 200km*timestep for other timestep values; DTTHRESHOLD is the maximum allowed time interval -in timesteps- between two points to be connected. A value of 1 or 2 is recommended for this last parameter. For example, with a value of 1 only consecutive points in time are connected. RESOLUTION, DTHRESHOLD and DTTHRESHOLD are optional arguments. If not provided, the plot won't have connected track dots, and only sparse points will be shown.   
+PATHTOFOLDER must be the path to the folder created by the PART I. Inside that folder, it should be present the *-track.RData file -output of findmedicanes.sh-, along with a folder called 'output' containing the vertically interpolated files -slp, uvmet10 and z- in netcdf format. PATHTOFOLDER is to be introduced with no quotation marks. ADJUST should be one of TRUE/FALSE, and determines if the output map extent should be adjusted to the track, or the complete domain should be plotted instead. Either RESOLUTION, DTHRESHOLD or DTTHRESHOLD, which should be numbers. RESOLUTION represents the grid horizontal resolution in kilometers -the same as in the part I-; DTHRESHOLD refers to the maximum allowed distance between two track points to be connected -in km-, and a value of DTHRESHOLD below 200 km is highly recommended for physical reasons if timestep is 1 hour, 200km*timestep for other timestep values; DTTHRESHOLD is the maximum allowed time interval -in timesteps- between two points to be connected. A value of 1 or 2 is recommended for this last parameter. For example, with a value of 1 only consecutive points in time are connected. RESOLUTION, DTHRESHOLD and DTTHRESHOLD are optional arguments. If not provided, the plot won't have connected track dots, and only sparse points will be shown. 
+Note: This algorithm is specifically suited for WRF output in Lambert projection, and automatically creates the CRS by reading the ncdf file header. In case of working with a different projection, you should change the CRS to that of the data in the Code/PostProcessing/PlotTrack.R code.
 
 Output of this tool is a pdf called trackplot.pdf, located inside the provided folder. 
 
