--- a/README
+++ b/README
@@ -39,10 +39,9 @@ There are two postprocessing tools provided in this package, one for producing a
 #Plot of calculated track
 To plot the calculated track -SEE PART I-, you should go to the 'Code' folder and introduce the following command in the console:
 
-bash plotmedicanestrack.sh PATHTOFOLDER ADJUST RESOLUTION DTHRESHOLD DTTHRESHOLD
+bash plotmedicanestrack.sh PATHTOFOLDER ADJUST COMPLETE CONNECT SLPEXPANDN RESOLUTION DTHRESHOLD DTTHRESHOLD
 
-PATHTOFOLDER must be the path to the folder created by the PART I. Inside that folder, it should be present the *-track.RData file -output of findmedicanes.sh-, along with a folder called 'output' containing the vertically interpolated files -slp, uvmet10 and z- in netcdf format. PATHTOFOLDER is to be introduced with no quotation marks. ADJUST should be one of TRUE/FALSE, and determines if the output map extent should be adjusted to the track, or the complete domain should be plotted instead. Either RESOLUTION, DTHRESHOLD or DTTHRESHOLD, which should be numbers. RESOLUTION represents the grid horizontal resolution in kilometers -the same as in the part I-; DTHRESHOLD refers to the maximum allowed distance between two track points to be connected -in km-, and a value of DTHRESHOLD below 200 km is highly recommended for physical reasons if timestep is 1 hour, 200km*timestep for other timestep values; DTTHRESHOLD is the maximum allowed time interval -in timesteps- between two points to be connected. A value of 1 or 2 is recommended for this last parameter. For example, with a value of 1 only consecutive points in time are connected. RESOLUTION, DTHRESHOLD and DTTHRESHOLD are optional arguments. If not provided, the plot won't have connected track dots, and only sparse points will be shown. 
-Note: This algorithm is specifically suited for WRF output in Lambert projection, and automatically creates the CRS by reading the ncdf file header. In case of working with a different projection, you should change the CRS to that of the data in the Code/PostProcessing/PlotTrack.R code.
+PATHTOFOLDER must be the path to the folder created by the PART I. Inside that folder, it should be present the *-track.RData file -output of findmedicanes.sh-, along with a folder called 'output' containing the vertically interpolated files -slp, uvmet10 and z- in netcdf format. PATHTOFOLDER is to be introduced with no quotation marks. ADJUST should be one of TRUE/FALSE, and determines if the output map extent should be adjusted to the track, or the complete domain should be plotted instead. COMPLETE should be one of TRUE/FALSE, and determines if the track should be complemented with the SLP minimum path. CONNECT refers to the possibility of connecting track points trough a continuous line. SLPEXPANDN, RESOLUTION, DTHRESHOLD or DTTHRESHOLD should also be introduced as numbers. SLPEXPANDN is the number of track points that should be taken to expand the track at its beginning and ending. RESOLUTION represents the grid horizontal resolution in kilometers -the same as in the part I-; DTHRESHOLD refers to the maximum allowed distance between two track points to be connected -in km-, and a value of DTHRESHOLD below 200 km is highly recommended for physical reasons if timestep is 1 hour, 200km*timestep for other timestep values; DTTHRESHOLD is the maximum allowed time interval -in timesteps- between two points to be connected. A value of 1 or 2 is recommended for this last parameter. For example, with a value of 1 only consecutive points in time are connected. RESOLUTION, DTHRESHOLD and DTTHRESHOLD are optional arguments. If not provided, the plot won't have connected track dots, and only sparse points will be shown.   
 
 Output of this tool is a pdf called trackplot.pdf, located inside the provided folder. 
 
@@ -76,15 +75,19 @@ y:                                 coordinate of the center position in the lati
 Lat:                               latitudinal coordinate of the center position -in degrees-
 center.slp.hPa:                    SLP value at the center position -in hPa-
 inner.radius.km:                   Medicane inner radius calculated as the distance from the center to the eyewall -max wind surface-
-outer.radius.km:                   Medicane outer radius calculated as the distance from the center to the zero vorticity surface
+outer.radius.km:                   Medicane outer radius calculated as the mean distance from the center to the zero vorticity closed line points
 B.m:                               B Hart thermal symmetry parameter value at the center position -in meters-
 LTW:                               LTW Hart lower thermal wind parameter value at the center position
 UTW:                               UTW Hart upper thermal wind parameter value at the center position
-max.100km.wind.kmh:                maximum wind speed value inside a 100 km of radius circle around the center position -in km.h{-1}-
+max.inZVradius.wind.kmh:           maximum wind speed value inside a circle with the zero vorticity radius around the center position -in km.h{-1}-
 center.wind.kmh:                   wind speed value at the center position -in km.h{-1}-
-min.100km.wind.kmh:                minimum wind speed value inside a 100 km of radius circle around the center position -in km.h{-1}-
-min.100km.slp.hPa:                 minimum SLP value inside a 100 km of radius circle around the center position -in hPa-
-minSLP.center.distance.km:         distance between the min.100km.slp.hPa position and the center position -in km-
+min.inZVradius.wind.kmh:           minimum wind speed value inside a circle with the zero vorticity radius around the center position -in km.h{-1}-
+min.inZVradius.slp.x.position:     x position of the minimum SLP value inside a circle with the zero vorticity radius around the center position -in km.h{-1}-
+min.inZVradius.slp.Lon:            longitude of the minimum SLP value inside a circle with the zero vorticity radius around the center position -in km.h{-1}-
+min.inZVradius.slp.y.position:     y position of the minimum SLP value inside a circle with the zero vorticity radius around the center position -in km.h{-1}-
+min.inZVradius.slp.Lat:            latitude of the minimum SLP value inside a circle with the zero vorticity radius around the center position -in km.h{-1}-
+min.inZVradius.slp.hPa:            minimum SLP value inside a circle with the zero vorticity radius around the center position -in hPa-
+minSLP.center.distance.km:         distance between the min.inZVradius.slp.hPa position and the center position -in km-
 Saffir.Simpson.scale.category:     storm category according to the Saffir-Simpson scale using the max.100km.wind.kmh wind speed 
 
 
